fix: pick data bug and process empty data